# futurewalker

./: .bazelrc  .clang-format  .clangd  .gitignore  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  conanfile.py  defs.bzl
Source/: CMakeLists.txt
Source/Action/: CMakeLists.txt  Futurewalker.Action.Action.cpp  Futurewalker.Action.Action.hpp  Futurewalker.Action.ActionEvent.cpp  Futurewalker.Action.ActionEvent.hpp  Futurewalker.Action.CommandDispatcher.cpp  Futurewalker.Action.CommandDispatcherType.hpp  Futurewalker.Action.CommandEvent.cpp  Futurewalker.Action.CommandEventType.hpp  Futurewalker.Action.CommandNode.cpp  Futurewalker.Action.CommandNode.hpp  Futurewalker.Action.CommandNodeType.hpp  Futurewalker.Action.CommandObserver.hpp  Futurewalker.Action.CommandObserverType.hpp  Futurewalker.Action.CommandParameter.hpp  Futurewalker.Action.CommandParameterType.hpp
Source/Animation/: Futurewalker.Animation.AnimationTimer.cpp  Futurewalker.Animation.AnimationTimer.hpp  Futurewalker.Animation.AnimationTimerEvent.cpp  Futurewalker.Animation.AnimationTimerEvent.hpp  Futurewalker.Animation.AnimationTimerEventType.hpp  Futurewalker.Animation.AnimationTimerType.hpp  Futurewalker.Animation.RootAnimationTimer.cpp  Futurewalker.Animation.RootAnimationTimer.hpp  Futurewalker.Animation.RootAnimationTimerType.hpp
Source/Application/: BUILD.bazel  Futurewalker.Application.ActionView.cpp  Futurewalker.Application.ActionView.hpp  Futurewalker.Application.ActionViewType.hpp  Futurewalker.Application.AlignView.cpp  Futurewalker.Application.AlignView.hpp  Futurewalker.Application.AlignViewType.hpp  Futurewalker.Application.Alignment.hpp  Futurewalker.Application.AlignmentType.hpp  Futurewalker.Application.Application.cpp  Futurewalker.Application.Application.hpp  Futurewalker.Application.ApplicationColor.cpp  Futurewalker.Application.ApplicationColor.hpp  Futurewalker.Application.ApplicationContext.cpp  Futurewalker.Application.ApplicationContext.hpp  Futurewalker.Application.ApplicationContextType.hpp  Futurewalker.Application.ApplicationEvent.cpp  Futurewalker.Application.ApplicationEvent.hpp  Futurewalker.Application.ApplicationStyle.cpp  Futurewalker.Application.ApplicationStyle.hpp  Futurewalker.Application.ApplicationTheme.cpp  Futurewalker.Application.ApplicationTheme.hpp  Futurewalker.Application.ApplicationThemeType.hpp  Futurewalker.Application.ApplicationType.hpp  Futurewalker.Application.ArrangeParameter.cpp  Futurewalker.Application.ArrangeParameter.hpp  Futurewalker.Application.ArrangeParameterType.hpp  Futurewalker.Application.ArrangeScope.cpp  Futurewalker.Application.ArrangeScope.hpp  Futurewalker.Application.ArrangeScopeType.hpp  Futurewalker.Application.AxisConstraints.cpp  Futurewalker.Application.AxisConstraints.hpp  Futurewalker.Application.AxisConstraintsType.hpp  Futurewalker.Application.BoxConstraints.cpp  Futurewalker.Application.BoxConstraints.hpp  Futurewalker.Application.BoxConstraintsType.hpp  Futurewalker.Application.BoxView.cpp  Futurewalker.Application.BoxView.hpp  Futurewalker.Application.ButtonView.cpp  Futurewalker.Application.ButtonView.hpp  (+220 more)
Source/Async/: Futurewalker.Async.Async.hpp  Futurewalker.Async.AsyncFunction.hpp  Futurewalker.Async.AsyncTask.hpp  Futurewalker.Async.AsyncTaskType.hpp  Futurewalker.Async.AsyncType.hpp  Futurewalker.Async.AwaitableTraits.hpp  Futurewalker.Async.Concepts.hpp  Futurewalker.Async.Future.hpp  Futurewalker.Async.FutureType.hpp  Futurewalker.Async.Lazy.hpp  Futurewalker.Async.LazyTask.hpp  Futurewalker.Async.LazyTaskType.hpp  Futurewalker.Async.ResumesOnSameThreadTask.hpp  Futurewalker.Async.ResumesOnSameThreadTaskType.hpp  Futurewalker.Async.SyncWaitTask.hpp  Futurewalker.Async.Task.hpp  Futurewalker.Async.TaskHandle.hpp  Futurewalker.Async.TaskHandleType.hpp  Futurewalker.Async.TaskType.hpp  Futurewalker.Async.ThisThread.cpp  Futurewalker.Async.ThisThread.hpp  Futurewalker.Async.ThreadPool.cpp  Futurewalker.Async.ThreadPool.hpp  Futurewalker.Async.ThreadPoolType.hpp  Futurewalker.Async.TypeTraits.hpp
Source/Attribute/: BUILD.bazel  CMakeLists.txt  Futurewalker.Attribute.AttributeAccessor.hpp  Futurewalker.Attribute.AttributeArg.hpp  Futurewalker.Attribute.AttributeEvent.cpp  Futurewalker.Attribute.AttributeEvent.hpp  Futurewalker.Attribute.AttributeFunction.hpp  Futurewalker.Attribute.AttributeId.hpp  Futurewalker.Attribute.AttributeNode.cpp  Futurewalker.Attribute.AttributeNode.hpp  Futurewalker.Attribute.AttributeNodeType.hpp  Futurewalker.Attribute.AttributeObserver.hpp  Futurewalker.Attribute.AttributeObserverType.hpp  Futurewalker.Attribute.AttributeSlot.cpp  Futurewalker.Attribute.AttributeSlot.hpp  Futurewalker.Attribute.AttributeSlotCache.cpp  Futurewalker.Attribute.AttributeSlotCache.hpp  Futurewalker.Attribute.AttributeSlotType.hpp  Futurewalker.Attribute.AttributeValue.cpp  Futurewalker.Attribute.AttributeValue.hpp  Futurewalker.Attribute.AttributeValueType.hpp  Futurewalker.Attribute.StaticAttribute.hpp  Futurewalker.Attribute.StaticAttributeBase.cpp  Futurewalker.Attribute.StaticAttributeBase.hpp  Futurewalker.Attribute.StaticAttributeBaseType.hpp  Futurewalker.Attribute.StaticAttributeType.hpp  Futurewalker.Attribute.hpp
Source/Base/: BUILD.bazel  Futurewalker.Base.CommandLine.cpp  Futurewalker.Base.CommandLine.hpp  Futurewalker.Base.CommandLineType.hpp  Futurewalker.Base.Debug.cpp  Futurewalker.Base.Debug.hpp  Futurewalker.Base.DebugMacro.hpp  Futurewalker.Base.DebugType.hpp  Futurewalker.Base.Environment.cpp  Futurewalker.Base.Environment.hpp  Futurewalker.Base.EnvironmentContextType.hpp  Futurewalker.Base.EnvironmentType.hpp  Futurewalker.Base.Locator.cpp  Futurewalker.Base.Locator.hpp  Futurewalker.Base.LocatorType.hpp  Futurewalker.Base.SystemInfo.cpp  Futurewalker.Base.SystemInfo.hpp  Futurewalker.Base.SystemInfoType.hpp  Futurewalker.Base.UniqueIdentifier.hpp  Futurewalker.Base.UniqueIdentifierManager.cpp  Futurewalker.Base.UniqueIdentifierManager.hpp  Futurewalker.Base.UniqueIdentifierManagerType.hpp  Futurewalker.Base.UniqueIdentifierType.hpp  (+1 more)
tests/: CMakeLists.txt
(+1559 files in other folders)
