alias(
    name = "Core",
    actual = "//Source/Core",
    visibility = ["//visibility:public"],
)

alias(
    name = "Base",
    actual = "//Source/Base",
    visibility = ["//visibility:public"],
)

alias(
    name = "Async",
    actual = "//Source/Async",
    visibility = ["//visibility:public"],
)

alias(
    name = "Signal",
    actual = "//Source/Signal",
    visibility = ["//visibility:public"],
)

alias(
    name = "Event",
    actual = "//Source/Event",
    visibility = ["//visibility:public"],
)

alias(
    name = "Dependency",
    actual = "//Source/Dependency",
    visibility = ["//visibility:public"],
)

alias(
    name = "Animation",
    actual = "//Source/Animation",
    visibility = ["//visibility:public"],
)

alias(
    name = "Graphics",
    actual = "//Source/Graphics",
    visibility = ["//visibility:public"],
)

alias(
    name = "Attribute",
    actual = "//Source/Attribute",
    visibility = ["//visibility:public"],
)
