module(
    name = "futurewalker",
    version = "0.0.1",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")

conan_extension = use_extension("//build/conan:conan_deps_module_extension.bzl", "conan_extension")
use_repo(conan_extension, "boost", "catch2", "bzip2", "zlib", "fmt", "brotli", "expat", "freetype", "harfbuzz", "icu", "libjpeg-turbo", "libpng", "libwebp", "skia")
