add_subdirectory(Core)
add_subdirectory(Base)
add_subdirectory(Async)
add_subdirectory(Signal)
add_subdirectory(Event)
add_subdirectory(Dependency)
add_subdirectory(Geometry)
add_subdirectory(Unit)
add_subdirectory(Text)
add_subdirectory(Attribute)
add_subdirectory(Color)
add_subdirectory(Animation)
add_subdirectory(Action)
add_subdirectory(Graphics)
add_subdirectory(Application)
add_subdirectory(Component)
add_subdirectory(Main)
add_subdirectory(Test)
