add_subdirectory(Animation)
add_subdirectory(Application)
add_subdirectory(Async)
add_subdirectory(Attribute)
add_subdirectory(Base)
add_subdirectory(Color)
add_subdirectory(Core)
add_subdirectory(Dependency)
add_subdirectory(Event)
add_subdirectory(Geometry)
add_subdirectory(Graphics)
add_subdirectory(Signal)
add_subdirectory(Text)
