load("//:defs.bzl", "fw_library")

fw_library(
    name = "Application",
    visibility = ["//visibility:public"],
    deps = [
        "//Source/Base",
        "//Source/Core",
        "//Source/Event",
        "//Source/Attribute",
        "//Source/Animation",
        "//Source/Graphics",
    ],
    linkopts_win = [
        "/DEFAULTLIB:dcomp.lib",
        "/DEFAULTLIB:dxgi.lib",
        "/DEFAULTLIB:dwmapi.lib",
    ],
)
