load("//:defs.bzl", "fw_library")

fw_library(
    name = "Graphics",
    visibility = ["//visibility:public"],
    deps = [
        "//Source/Core",
        "//Source/Base",
        "//Source/Color",
        "//Source/Geometry",
        "//Source/Unit",
        "//Source/Text",
        "@skia//:skia",
    ],
    linkopts_win = [
        "/DEFAULTLIB:d3d11.lib",
        "/DEFAULTLIB:d3d12.lib",
    ],
)
