load("//:defs.bzl", "fw_test")

fw_test(
    name = "Core",
    deps = ["@futurewalker//:Core"],
    srcs = ["Core.cpp"],
    tags = ["Core"],
)

fw_test(
    name = "Concepts",
    deps = ["@futurewalker//:Core"],
    srcs = ["Concepts.cpp"],
    tags = ["Core"],
)

fw_test(
    name = "Boolean",
    deps = ["@futurewalker//:Core"],
    srcs = ["Boolean.cpp"],
    tags = ["Core"],
)

fw_test(
    name = "Integer",
    deps = ["@futurewalker//:Core"],
    srcs = ["Integer.cpp"],
    tags = ["Core"],
)

fw_test(
    name = "Float",
    deps = ["@futurewalker//:Core"],
    srcs = ["Float.cpp"],
    tags = ["Core"],
)

fw_test(
    name = "Math",
    deps = ["@futurewalker//:Core"],
    srcs = ["Math.cpp"],
    tags = ["Core"],
)

fw_test(
    name = "Pointer",
    deps = ["@futurewalker//:Core"],
    srcs = ["Pointer.cpp"],
    tags = ["Core"],
)

fw_test(
    name = "StringView",
    deps = ["@futurewalker//:Core"],
    srcs = ["StringView.cpp"],
    tags = ["Core"],
)

fw_test(
    name = "String",
    deps = ["@futurewalker//:Core"],
    srcs = ["String.cpp"],
    tags = ["Core"],
)
