load("//:defs.bzl", "fw_test_suite")

fw_test_suite(
    deps = ["@futurewalker//:Core"],
    tags = ["Core"],
    names = [
        "Boolean",
        "Concepts",
        "Core",
        "Float",
        "Integer",
        "Math",
        "Memory",
        "Optional",
        "Pointer",
        "String",
        "StringFunction",
        "StringView",
        "TimePoint",
        "TypeId",
        "TypeTraits",
    ],
)
